--- a/client/src/style.scss
+++ b/client/src/style.scss
@@ -88,8 +88,45 @@ $lightGreen : #b9e7e7;
           span{
             cursor: pointer;
           }
+
+          .write{
+            background-color: $lightGreen;
+            width: 50px;
+            height: 50px;
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-weight: 300;
+            border: 1px solid white;
+
+            &:hover{
+              color: teal;
+              background-color: white;
+              border: 1px solid teal;
+            }
+          }
         }
       }
     }
+
+    //FOOTER
+
+    footer{
+      margin-top: 100px;
+      padding: 20px;
+      background-color: $lightGreen;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      font-size: 12px;
+      img{
+        height: 50px;
+      }
+    }
+
+    //HOME
+    
+
   }
 }
